MzNg: Change login box position so that it aligns correctly

--- a/mzalendo/core/static/css/nigeria.css
+++ b/mzalendo/core/static/css/nigeria.css
@@ -3438,6 +3438,10 @@ menu#site-user-tools {
   }
 }
 
+#login-box {
+  top: 67px;
+}
+
 .featured-person.featured-person-placeholder {
   text-align: center;
   height: 250px;
