--- a/mzalendo/core/static/sass/_nigeria_overrides.scss
+++ b/mzalendo/core/static/sass/_nigeria_overrides.scss
@@ -95,6 +95,9 @@ menu#site-user-tools {
   }
 }  
 
+#login-box {
+  top: 67px;
+}
 .featured-person {
   &.featured-person-placeholder {
     text-align: center;
